[tool.poetry]
name = "langchain-robomo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
rag-momento-vector-index = {path = "packages/rag-momento-vector-index", develop = true}
bs4 = "^0.0.2"
lxml = "^5.1.0"
nest-asyncio = "^1.6.0"
boto3 = "^1.34.26"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
